# line-of-sight

./: .gitignore  CMakeLists.txt  README.md  bresenham.cu  bresenham.hpp  cuda_utilities.hpp  file_utilities.hpp  gpu.cu  gpu.hpp  line_of_sight.cpp  line_of_sight_kernel.cu  main.cpp  mpi.hpp  mpi_gpu.cu  mpi_gpu.hpp  no_threads.hpp  test8x8.raw  threads.hpp  verification.cpp
